TAB-7242 Avoid mit circs message window becoming clipped when zoomed

--- a/web/src/main/assets/static/css/id7/mitcircs.less
+++ b/web/src/main/assets/static/css/id7/mitcircs.less
@@ -314,7 +314,7 @@
 
   &__body {
     padding: @panel-body-padding;
-    max-height: calc(75vh - 300px);
+    max-height: 100vh;
     overflow-y: auto;
 
     &__message {
